--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,6 @@ services:
       - ./storage:/storage
     environment:
       - JAVA_OPTS=-Xmx4g
+    command: python3 run_me.py
+    stdin_open: true
+    tty: true
